--- a/Home.html
+++ b/Home.html
@@ -27,8 +27,50 @@
     </header>
 
     <main>
-        <img src="images/trashcan.png" class="trashcan">
+        <!-- 미션선택 모달창 -->
+        <div class="modal" id="modal">
+            <div class="modalContainer">
+                <h3>30일간 도전할 미션을 선택하세요!</h3>
+
+                <div class="challengeContainer" id="challenges">
+                    <h4>어떤 것에 도전하고 싶나요?</h4>
+
+                    <div class="challenge">
+                        <button>공부</button>
+                        <button>운동</button>
+                    </div>
+                </div>
+
+                <div class="challengeContainer" id="challenge-types">
+                    <h4>어떤 공부를 하고 싶나요?</h4>
+                    <!--오늘의 미션으로 무엇을 하고 싶나요?-->
+
+                    <div class="challenge-type">
+                        <button>국어</button>
+                        <button>영어</button>
+                        <button>수학</button>
+                    </div>
+                </div>
+
+                <div class="startContainer" id="startContainer">
+                    <button class="startbtn">도전</button>
+                </div>
+
+                <p>*선택한 주제로 30일 챌린지를 성공하면 수료증을 드립니다.</p>
+            </div>
+        </div>
+
+
+        <!-- 휴지통 -->
+        <div class="trashcanContainer">
+            <img src="images/trashcan.png" class="trashcan">
+            <img src="images/tissue.png" class="tissue">
+        </div>
+
+        <!-- 오늘의미션 모달창 -->
     </main>
+
+    <script src="js/home.js"></script>
 </body>
 
 </html>
