--- a/login.html
+++ b/login.html
@@ -6,19 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/join.css">
-    <title>JOIN</title>
+    <link rel="stylesheet" href="css/login.css">
+    <title>LOGIN</title>
 </head>
 <body>
-    <div class="join-container">
-        <!-- join text -->
-        <span class="join-text">JOIN</span>
+    <div class="login-container">
+        <!-- login text -->
+        <span class="login-text">LOGIN</span>
         <!-- 입력창 -->
         <div class="text-container">
-            <div class="input-text">
-                name<br>
-                <input type="text">
-            </div>
             <div class="input-text">
                 id<br>
                 <input type="text">
@@ -27,13 +23,9 @@
                 password<br>
                 <input type="password">
             </div>
-            <div class="input-text">
-                check password<br>
-                <input type="password">
-            </div>
         </div>
-        <!-- next text -->
-        <span class="next-text">NEXT></span>
+        <!-- login button -->
+        <button type="submit" id="loginBtn">login</button>
     </div>
 </body>
 </html>
