--- a/Home.html
+++ b/Home.html
@@ -60,14 +60,40 @@
             </div>
         </div>
 
-
         <!-- 휴지통 -->
         <div class="trashcanContainer">
             <img src="images/trashcan.png" class="trashcan">
-            <img src="images/tissue.png" class="tissue">
+            <div class="tissueContainer">
+                <div class="tissue" id="tissue">
+                    <div class="tissue-modal" id="tissueModal">
+                        <!-- 오늘의미션 모달창 -->
+                        <h5>오늘의 미션!</h5>
+                        <div class="chks">
+                            <div class="chk">
+                                <input type="checkbox" id="chk1">
+                                <label for="chk1">외국 드라마 자막으로 보기</label>
+                            </div>
+                            <div class="chk">
+                                <input type="checkbox" id="chk2">
+                                <label for="chk2">실전 회화 단어 10개 외우기</label>
+                            </div>
+                            <div class="chk">
+                                <input type="checkbox" id="chk3">
+                                <label for="chk3">영어로 자기소개서 써보기</label>
+                            </div>
+                        </div>
+                        <div class="timerContainer">
+                            <div class="timer">
+                                <div id="d-day-hour"></div>
+                                :
+                                <div id="d-day-min"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <!-- 오늘의미션 모달창 -->
     </main>
 
     <script src="js/home.js"></script>
