home_fail.html,css,js commit

--- a/home_fail.html
+++ b/home_fail.html
@@ -30,7 +30,7 @@
         <!-- 미션선택 모달창 -->
         <div class="modal" id="modal">
             <div class="modalContainer">
-                <h3>30일간 도전할 미션을 선택하세요!</h3>
+                <h2>30일간 도전할 미션을 선택하세요!</h2>
 
                 <div class="challengeContainer" id="challenges">
                     <h4>어떤 것에 도전하고 싶나요?</h4>
@@ -67,7 +67,7 @@
                 <div class="tissue" id="tissue">
                     <div class="tissue-modal" id="tissueModal">
                         <!-- 오늘의미션 모달창 -->
-                        <h5>오늘의 미션!</h5>
+                        <h4>오늘의 미션!</h4>
                         <div class="chks">
                             <div class="chk">
                                 <input type="checkbox" id="chk1">
@@ -98,7 +98,12 @@
             <!-- 미션 실패 -->
             <span class="missionfail-text">미션 실패</span>
             <!-- 휴지파쇄 버튼 -->
-            <button type="submit" id="failBtn">휴지 파쇄</button>
+            <button type="submit" id="failBtn" onclick="tissueCrush()">휴지 파쇄</button>
+        </div>
+        
+        <div class="tissue-crush-container">
+            <img src="/images/left_tissue.png" id="left-tissue">
+            <img src="/images/right_tissue.png" id="right-tissue">
         </div>
 
     </main>
