mission_fail 페이지 이미지 경로 수정

--- a/mission_fail.html
+++ b/mission_fail.html
@@ -37,8 +37,8 @@
         </div>
         
         <div class="tissue-crush-container">
-            <img src="/images/left_tissue.png" id="left-tissue">
-            <img src="/images/right_tissue.png" id="right-tissue">
+            <img src="./images/left_tissue.png" id="left-tissue">
+            <img src="./images/right_tissue.png" id="right-tissue">
         </div>
 
     </main>
