next> 텍스트를 버튼으로 변경

--- a/join.html
+++ b/join.html
@@ -32,8 +32,8 @@
                 <input type="password">
             </div>
         </div>
-        <!-- next text -->
-        <span class="next-text">NEXT></span>
+        <!-- next button -->
+        <button type="submit" id="nextBtn">NEXT></button>
     </div>
 </body>
 </html>
