mypage 수료증 간격 및 위치 수정

--- a/mypage.html
+++ b/mypage.html
@@ -31,110 +31,92 @@
             <div class="profile">
                 <i class="bi bi-emoji-smile"></i>
             </div>
-            <div class="name"><b>노승주</b></div>
+            <div class="name"><b>suyeon</b></div>
         </div>
 
-        <hr>
+        <div class="hr-container">
+            <hr>
+        </div>
 
-        <div class="certificates-item">
-            <ul>
-                <li>
-                    <div class="cer-box">
-                        <a class="cer-title">수료증</a>
-                        <br>
-                        <a class="cer-content">30일 간의 미션을 수행했습니다.</a>
-                        <br>
-                        <a class="cer-target">목표 : 영어 공부하기</a>
-                        <br>
-                    </div>
-                </li>
-                <li>
-                    <div class="cer-box">
-                        <a class="cer-title">수료증</a>
-                        <br>
-                        <a class="cer-content">30일 간의 미션을 수행했습니다.</a>
-                        <br>
-                        <a class="cer-target">목표 : 영어 공부하기</a>
-                        <br>
-                    </div> 
-                </li>
-                <li>
-                    <div class="cer-box">
-                        <a class="cer-title">수료증</a>
-                        <br>
-                        <a class="cer-content">30일 간의 미션을 수행했습니다.</a>
-                        <br>
-                        <a class="cer-target">목표 : 영어 공부하기</a>
-                        <br>
-                    </div>
-                </li>
-            </ul>
+        <div id="certificates-item">
+            
+            <div class="cer-box-container">
+            <div class="cer-box">
+                <p class="cer-title">수료증</p>
+                <br>
+                <p class="cer-content">30일 간의 미션을 수행했습니다</p>
+                <br>
+                <p class="cer-target">목표 : 영어 공부하기</p>
+            </div>
 
-            <ul>
-                <li>
-                    <div class="cer-box">
-                        <a class="cer-title">수료증</a>
-                        <br>
-                        <a class="cer-content">30일 간의 미션을 수행했습니다.</a>
-                        <br>
-                        <a class="cer-target">목표 : 영어 공부하기</a>
-                        <br>
-                    </div>
-                </li>
-                <li>
-                    <div class="cer-box">
-                        <a class="cer-title">수료증</a>
-                        <br>
-                        <a class="cer-content">30일 간의 미션을 수행했습니다.</a>
-                        <br>
-                        <a class="cer-target">목표 : 영어 공부하기</a>
-                        <br>
-                    </div> 
-                </li>
-                <li>
-                    <div class="cer-box">
-                        <a class="cer-title">수료증</a>
-                        <br>
-                        <a class="cer-content">30일 간의 미션을 수행했습니다.</a>
-                        <br>
-                        <a class="cer-target">목표 : 영어 공부하기</a>
-                        <br>
-                    </div>
-                </li>
-            </ul>
+            <div class="cer-box">
+                <p class="cer-title">수료증</p>
+                <br>
+                <p class="cer-content">30일 간의 미션을 수행했습니다</p>
+                <br>
+                <p class="cer-target">목표 : 영어 공부하기</p>
+            </div>
 
-                        <ul>
-                <li>
-                    <div class="cer-box">
-                        <a class="cer-title">수료증</a>
-                        <br>
-                        <a class="cer-content">30일 간의 미션을 수행했습니다.</a>
-                        <br>
-                        <a class="cer-target">목표 : 영어 공부하기</a>
-                        <br>
-                    </div>
-                </li>
-                <li>
-                    <div class="cer-box">
-                        <a class="cer-title">수료증</a>
-                        <br>
-                        <a class="cer-content">30일 간의 미션을 수행했습니다.</a>
-                        <br>
-                        <a class="cer-target">목표 : 영어 공부하기</a>
-                        <br>
-                    </div> 
-                </li>
-                <li>
-                    <div class="cer-box">
-                        <a class="cer-title">수료증</a>
-                        <br>
-                        <a class="cer-content">30일 간의 미션을 수행했습니다.</a>
-                        <br>
-                        <a class="cer-target">목표 : 영어 공부하기</a>
-                        <br>
-                    </div>
-                </li>
-            </ul>
+            <div class="cer-box">
+                <p class="cer-title">수료증</p>
+                <br>
+                <p class="cer-content">30일 간의 미션을 수행했습니다</p>
+                <br>
+                <p class="cer-target">목표 : 영어 공부하기</p>
+            </div>
+            </div>
+
+            <div class="cer-box-container">
+            <div class="cer-box">
+                <p class="cer-title">수료증</p>
+                <br>
+                <p class="cer-content">30일 간의 미션을 수행했습니다</p>
+                <br>
+                <p class="cer-target">목표 : 영어 공부하기</p>
+            </div>
+
+            <div class="cer-box">
+                <p class="cer-title">수료증</p>
+                <br>
+                <p class="cer-content">30일 간의 미션을 수행했습니다</p>
+                <br>
+                <p class="cer-target">목표 : 영어 공부하기</p>
+            </div>
+
+            <div class="cer-box">
+                <p class="cer-title">수료증</p>
+                <br>
+                <p class="cer-content">30일 간의 미션을 수행했습니다</p>
+                <br>
+                <p class="cer-target">목표 : 영어 공부하기</p>
+            </div>
+            </div>
+
+            <div class="cer-box-container">
+            <div class="cer-box">
+                <p class="cer-title">수료증</p>
+                <br>
+                <p class="cer-content">30일 간의 미션을 수행했습니다</p>
+                <br>
+                <p class="cer-target">목표 : 영어 공부하기</p>
+            </div>
+
+            <div class="cer-box">
+                <p class="cer-title">수료증</p>
+                <br>
+                <p class="cer-content">30일 간의 미션을 수행했습니다</p>
+                <br>
+                <p class="cer-target">목표 : 영어 공부하기</p>
+            </div>
+
+            <div class="cer-box">
+                <p class="cer-title">수료증</p>
+                <br>
+                <p class="cer-content">30일 간의 미션을 수행했습니다</p>
+                <br>
+                <p class="cer-target">목표 : 영어 공부하기</p>
+            </div>
+            </div>
         </div>
     </main>
 
